[package]
name = "jbaublitz-me-wasm"
version = "0.1.0"
authors = ["John Baublitz <john.m.baublitz@gmail.com>"]
description = "My website"
repository = "https://github.com/jbaublitz/jbaublitz-me"
license = "BSD-3"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "*"
features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "Window"
]

[features]
wee-alloc = ["wee_alloc"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
